# labourreforms

./: .editorconfig  .envrc  .gitignore  README.md  data.json  data_process.py  data_pull.py  justfile  kings_speech_2024.toml  package-lock.json  package.json  pyproject.toml  render.py
.github/workflows/: pages-deployment.yaml  refresh-data.yaml
public/: _headers
src/: index.html  style.css
src/lliframe/: index.html
src/lliframe2024/: embed.js  index.html
