[project]
name = "whereslabour"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pip",
    "pydantic",
    "requests",
    "jinja2",
    "humanize",
]

[dependency-groups]
dev = [
    "ruff",
    "watchfiles",
    "mypy",
    "types-requests",
]

[tool.mypy]
strict = true
files = [
    "data_process.py",
    "data_pull.py",
    "render.py",
]